--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "vitest run"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.38.4",
@@ -23,6 +24,7 @@
     "eslint-config-next": "latest",
     "postcss": "8.4.0",
     "tailwindcss": "latest",
+    "vitest": "^1.6.0",
     "typescript": "latest"
   }
 }
