--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "@supabase/supabase-js": "^2.38.4",
     "next": "^13.5.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.16",
@@ -24,7 +25,7 @@
     "eslint-config-next": "latest",
     "postcss": "8.4.0",
     "tailwindcss": "latest",
-    "vitest": "^1.6.0",
-    "typescript": "latest"
+    "typescript": "latest",
+    "vitest": "^1.6.0"
   }
 }
