--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.38.4",
     "next": "^13.5.4",
+    "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "web-push": "^3.5.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
